# vis.paraflow

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTES.md  README.md  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: build.yaml
assets/image/: process.json
assets/video/: core.json
assets/video-processing/: core.json  process.json  requirements.txt
assets/video-processing/tpl/core/: play-video.py  save-video.py
assets/video-processing/tpl/process/: extract-audio.py
assets/video/tpl/core/: play-audio.py
cmake/: buildMacOS.cmake  buildUbuntu.cmake  buildWindows.cmake  deployMacOS.cmake  deployUbuntu.cmake  deployWindows.cmake  installMacOS.cmake  installUbuntu.cmake  installWindows.cmake  packageMacOS.cmake  packageUbuntu.cmake  packageWindows.cmake
components/landing/: Container.vue  Features.vue  Footer.vue  GetStarted.vue  Hero.vue  Navbar.vue
dat/im/: core.json
dat/im/tpl/core/: open-image.py  save-image.py  show-image.py
dat/im/tpl/process/: high-pass-filter.py  low-pass-filter.py
dat/im/wf/: add-images-show-(mac).wf  add-images-show.wf
deploy/linux/: CMakeLists.txt  app.desktop  make-app.sh
deploy/macos/: CMakeLists.txt  Info.plist  make-icns.sh
deploy/windows/: CMakeLists.txt  make-app.nsi
dubbing/: core.json  main.json  process-audio.json  process-video.json  requirements.txt
dubbing/scripts/: run-python-macos.sh  run-python.bat  run-python.sh
dubbing/test/: test-extract-audio-from-video-(linux).py  test-extract-audio-from-video-(win32).py  test-transcribe-speech-(macos).py
dubbing/tests/: test-extract-audio-from-video-linux.py  test-extract-audio-from-video-macos.py  test-extract-audio-from-video-win32.py  test-remove-audio-from-video-macos.py  test-transcribe-speech-macos.py
dubbing/tpl/core/: open-audio.py  open-video.py  play-video.py  save-audio.py  save-video.py
dubbing/tpl/process-audio/: transcribe.py
dubbing/tpl/process-video/: extract-audio.py
dubbing/wf/: extract-audio-from-video.wf  remove-audio-from-video.wf
image/: core.json  main.json
image/tpl/process/: add-images.py
image/wf/: add-images-show.wf  add-images.wf
include/: mainWindow.h  visConnector.h  visFileSelector.h  visLink.h  visMainWindow.h  visNode.h  visPalette.h  visScene.h  visUtilities.h  visView.h
package/macos/: CMakeLists.txt  Info.plist  make-app.sh
package/ubuntu/: CMakeLists.txt  app.sh  make-app.sh
package/ubuntu/debian/: postinst  postrm
package/windows/: CMakeLists.txt  make-app.nsi
pages/: index.vue
res/: resources.qrc  resources.rc  workflow.icns
scr/: make-icns.sh
scripts/linux/: app.postrm  control  make-app.sh  make-package.sh  visParaflow.sh
src/: main.cpp  mainWindow.cpp  visConnector.cpp  visFileSelector.cpp  visLink.cpp  visMainWindow.cpp  visNode.cpp  visPalette.cpp  visScene.cpp  visUtilities.cpp  visView.cpp
video/: core.json  main.json  process.json
video/test/: test_extract_audio_from_video.py  test_extract_audio_from_video_(linux).py  test_remove_audio_from_video_(macos).py
video/tpl/core/: save-audio.py  save-video.py
video/wf/: extract-audio-from-video.wf
